@@ -4,16 +4,16 @@ include ../generic/generic.mk
 
 abs_builddir = @abs_builddir@
 
+## Test programs to be run
+TESTS = smoketest.php
+LOG_COMPILER = $(PHP)
 # Use -n to disable use of the system php.ini (which might prevent php from
 # using dl() which would make our test fail).  It would be nicer to use "-c"
 # and provide an alternative php.ini but with "-c" it seems PHP still loads the
 # system.ini first (at least with PHP 4.3.10).
-TESTS_ENVIRONMENT = $(PHP) -n -d safe_mode=off -d enable_dl=on \
+AM_LOG_FLAGS = -n -d safe_mode=off -d enable_dl=on \
 	-d extension_dir='$(abs_builddir)/.libs' \
 	-d include_path='php5$(PHP_PATH_SEPARATOR)$(srcdir)/php5'
-
-## Test programs to be run
-TESTS = smoketest.php
 
 BUILT_SOURCES =\
 	php5/xapian_wrap.cc\
