@@ -1,0 +1,7 @@
+#!/bin/sh
+# PYTHONDONTWRITEBYTECODE is only supported by Python >= 2.6, so for older
+# versions we set a trap which will delete any generated .pyc files after
+# the test, or upon a signal.
+trap 'rm -f "${srcdir-.}/*.pyc"' 0 1 2 13 15
+PYTHONPATH=".:$PYTHONPATH" PYTHONDONTWRITEBYTECODE=1 ${PYTHON-python} "$@"
+exit $?
