@@ -1,3 +1,10 @@
+Thu Apr 04 06:05:54 GMT 2013  Olly Betts <olly@survex.com>
+
+	* configure.ac,csharp/Makefile.am,java/Makefile.am,lua/Makefile.am,
+	  perl/Makefile.am,php/Makefile.am,python/Makefile.am,
+	  python/run-python-test,ruby/Makefile.am,tcl8/Makefile.am: Fix the
+	  tests to work with the new automake parallel test driver.
+
 Thu Mar 28 04:27:46 GMT 2013  Olly Betts <olly@survex.com>
 
 	* csharp/Makefile.am,java/Makefile.am: Update for new
